# ghost-downloader-3-cli

./: .gitignore  README.md  pyproject.toml
app/config/: __init__.py  cfg.py  paths.py
app/models/: pack.py
app/services/: category_service.py  coroutine_runner.py  feature_service.py  speed_meter.py  task_service.py
gd3/: __init__.py  __main__.py  _qt_stubs.py  cli.py
